# vucar

./: .gitignore  README.md  __main__.py  armv1.yml  changes.md  cli.py  isues and plans .md  pyproject.toml  requirements.txt  stock vucar github steup.txt  the ID tracking probelm.md  vucar blueprint.md
backends/: base.py  github.py  local.py
core/: config.py  ffmpeg.py  security.py  video.py
ui/: prompts.py
